# HushDesk

./: .ci_ping  .gitignore  BUILD_NOTES.md  HushDesk.spec  LICENSE  MANIFEST.in  Makefile  README.md  SHIP_REPORT.md  Ship.md  powershell  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
docs/: ADMINISTRATIVE_DIRECTOR.md
fixtures/: sample_sim_bridgeman_10-23-2025.json  sample_sim_bridgeman_10-24-2025_dual.json  sample_sim_bridgeman_10-25-2025_dcd_held.json  sample_sim_bridgeman_10-26-2025_given_variants.json
hushdesk/: __init__.py  app.py  cli.py
hushdesk/adapters/: __init__.py  dnd.py
hushdesk/config/: building_master.json
hushdesk/core/: __init__.py  audit.py  building_master.py  diagnostics.py  exporters.py  models.py  parser.py  rules.py  timeutil.py
hushdesk/tabs/: __init__.py
hushdesk/tabs/bp/: tab.py
hushdesk/ui/: __init__.py  dialogs.py  legend.py  main_window.py  theme.py
packaging/: pyinstaller.spec
scripts/: build_exe.ps1
src/hushdesk/: __init__.py  cli.py  version.py
src/hushdesk/config/: building_master.json
src/hushdesk/core/: __init__.py  building_master.py  constants.py  privacy_guard.py  (+1 more)
src/hushdesk_win_privacy/: __init__.py
tests/: conftest.py  test_building_master.py  test_celljoin.py  test_checklist.py  test_decide.py  test_dragdrop_integration.py  test_engine_fallback.py  test_invariant.py  test_layout_blocks_rules.py  test_mar_equivalence.py  test_mar_monthly.py  test_mar_parser_smoke.py  test_parameter_lines.py  test_parameter_strips.py  test_pdf_ordering.py  test_perf_big_pdf.py  test_permissions.py  test_placeholder.py  test_privacy.py  test_privacy_output.py  test_quick_review_fallback.py  test_room_hall.py  test_rules.py  test_rules_multiline.py  test_timeparse.py  test_timeutil.py  test_tokenizer_strings.py
tests/data/: synthetic_fixture.json
tools/: admin_director_dump.py  auto_smoke.py  mini_audit.py  sanitize_utf8.py  simcheck.py  simregress.py
tools/windows/: build.ps1  installer.iss  release.ps1  release_checklist.md
(+39 files in other folders)
