[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hushdesk"
version = "0.0.0"
description = "HushDesk placeholder package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tzdata>=2024.1; platform_system == \"Windows\"",
]

[project.scripts]
hushdesk = "hushdesk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hushdesk = ["py.typed", "config/*.json"]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
packages = ["hushdesk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
