[metadata]
name = hushdesk
version = 0.0.0
description = HushDesk tools (src-layout)
license = Unknown

[options]
packages = find:
package_dir =
    = src
include_package_data = true
python_requires = >=3.10
install_requires =
    pymupdf
    pdfplumber
    pdfminer.six
    tkinterdnd2

[options.package_data]
hushdesk =
    config/*.json
    fixtures/*.json

[options.packages.find]
where = src
